--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>APHIDS for justice and good</title>
+    {% block styles %}{% endblock %}
   </head>
   <body>
-    {% block content %}
-    {% endblock %}
+    {% block content %}{% endblock %}
   </body>
 </html>
