--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,9 +19,9 @@ Looks like you have decided
 to <strong>APHIDS</strong> for great justice
 and extreme good. <strong>WELCOME..</strong></pre>
 
-<ul>
+<ul class="nav">
   <li><a href="{{ url_for('authenticate') }}">authenticate</a></li>
-  <li><a href="{{ url_for('register') }}">register</a></li>
+  <li><a href="{{ url_for('register') }}">create account</a></li>
 </ul>
 {% endblock %}
 
@@ -29,7 +29,7 @@ and extreme good. <strong>WELCOME..</strong></pre>
   {{ super() }}
   <style>
     .aphid {
-        color: #093;
+        color: #325720;
     }
     .aphid .eyes {
         color: #900;
