--- a/static/layout.css
+++ b/static/layout.css
@@ -13,7 +13,7 @@ form button{
     display: inline-block;
 }
 
-h1, img, body, div, span {
+h1, img, body, div, span, ul, li {
     margin: 0;
     padding: 0;
 }
@@ -55,10 +55,25 @@ form button {
     background-color: white;
     border: 1px solid black;
     padding: 4px;
+    box-shadow: 4px 4px 0 0 #b4dd9f;
+    transition: .01s linear;
 }
 
 form button:hover {
-    background-color: #ccc;
+    background-color: #e3e3e3;
+}
+
+form button:active {
+    transform: translate(2px, 2px);
+    box-shadow: 2px 2px 0 0 #b4dd9f;
+}
+
+form input {
+    border: 1px solid black;
+}
+
+form input:focus {
+    border: 1px solid #61a73e;
 }
 
 form .error {
@@ -66,4 +81,16 @@ form .error {
     padding-top: 5px;
     margin-right: 10%;
     color: #962424;
+}
+
+.nav {
+    list-style-type: none;
+}
+
+.nav a[href] {
+    color: #5b9c3a;
+}
+
+.nav a[href]:hover {
+    color: #325720;
 }
