--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,9 @@
       {{ form.password }}
     </p>
 
-    {% if errors %}<span class="error">invalid credentials</span>{% endif %}
+    {% if form.errors %}
+      <span class="error">{{ form.errors.username|first or form.errors.values()|first|first }}</span>
+    {% endif %}
     <button>login</button>
   </form>
 {% endblock %}
