--- a/static/layout.css
+++ b/static/layout.css
@@ -60,8 +60,7 @@ form button {
 }
 
 form button:hover {
-    background-color: #e3e3e3;
-}
+    background-color: #e3e3e3; }
 
 form button:active {
     transform: translate(2px, 2px);
@@ -78,7 +77,7 @@ form input:focus {
 
 form .error {
     float: right;
-    padding-top: 5px;
+    padding-top: 8px;
     margin-right: 10%;
     color: #962424;
 }
