add some power icons

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,18 +5,33 @@
     <title>{% block title %}aphids{% endblock %}</title>
     {% block styles %}
       <link rel="icon" href="{{ url_for('static', filename='aphids-logo.gif') }}">
+      <link href="http://fonts.googleapis.com/css?family=Oxygen+Mono"
+            rel="stylesheet">
       <link rel="stylesheet" href="{{ url_for('static', filename='layout.css') }}">
     {% endblock %}
   </head>
   <body>
-    <div class="container">
-      <a class="logo" href="{{ url_for('welcome') }}">
-        <img src="{{ url_for('static', filename='aphids-logo.gif') }}"
-             alt="Logo">
-        <h1>aphids</h1>
-      </a>
+    <div class="wrapper">
+      <div class="container">
+        <a class="logo" href="{{ url_for('welcome') }}">
+          <img src="{{ url_for('static', filename='aphids-logo.gif') }}"
+               alt="Logo">
+          <h1>aphids</h1>
+        </a>
 
-      {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
+
+      </div>
+      <div class="footer">
+        <a href="http://www.vim.org/" class="vim-powered">
+          <span class="vim">vim</span>
+          <span class="powered">This Site <strong>powered</strong></span>
+        </a>
+
+        <a href="https://python.org" class="python-powered">
+          <img src="{{ url_for('static', filename='python-powered-w-140x56.png') }}">
+        </a>
+      </div>
     </div>
   </body>
 </html>
