--- a/static/layout.css
+++ b/static/layout.css
@@ -1,7 +1,11 @@
 body,
 form button,
 form input {
-    font-family: "Courier New", Courier, monospace;
+    font-family: "Oxygen Mono", "Courier New", Courier, monospace;
+}
+
+body {
+    background-image: url("/static/lockbg.png");
 }
 
 .logo {
@@ -21,21 +25,29 @@ h1, img, body, div, span, ul, li {
 
 body {
     text-align: center;
+}
+
+body,
+html {
     width: 100%;
+    height: 100%;
 }
 
 .container {
+    position: relative;
     display: inline-block;
     text-align: left;
     margin-top: 20px;
     width: 90%;
     max-width: 360px;
+    padding-bottom: 60px;
 }
 
 form {
     border: 2px solid black;
     padding: 8px;
     padding-bottom: 20px;
+    background-color: white;
 }
 
 form legend {
@@ -99,4 +111,63 @@ form .error {
 
 .nav a[href]:hover {
     color: #325720;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.python-powered {
+    opacity: 0.4;
+    float: right;
+    margin: 6px;
+}
+.python-powered:hover {
+    opacity: 1;
+}
+
+.vim-powered {
+    width: 140px;
+    height: 56px;
+    float: right;
+    margin: 6px;
+    opacity: 0.4;
+    background-color: #61a73e;
+}
+
+.vim-powered:hover {
+    opacity: 1;
+}
+
+.vim-powered .vim {
+    display: inline-block;
+    background-color: #222;
+    color: #61a73e;
+    height: 100%;
+    width: 30%;
+    line-height: 56px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.vim-powered .powered {
+    display: inline-block;
+    color: #222;
+    width: 70%;
+    height: 100%;
+    float: right;
+    margin-top: 4px;
+    font-size: 16px;
+}
+
+.vim-powered .powered strong {
+    font-size: 20px;
+}
+
+.wrapper {
+    min-height: 100%;
+    position: relative;
 }
