remove ugly footer in preparation for powered-by

--- a/static/layout.css
+++ b/static/layout.css
@@ -117,60 +117,5 @@ form .error {
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-
-.python-powered {
-    opacity: 0.4;
-    float: right;
-    margin-right: 6px;
-    text-decoration: none;
-    height: 40px;
-}
-.python-powered:hover {
-    opacity: 1;
-}
-
-.vim-powered {
-    width: 100px;
-    height: 40px;
-    float: right;
-    margin-right: 6px;
-    opacity: 0.4;
-    background-color: #61a73e;
-    text-decoration: none;
-}
-
-.vim-powered:hover {
-    opacity: 1;
-}
-
-.vim-powered .vim {
-    display: inline-block;
-    background-color: #222;
-    color: #61a73e;
-    height: 100%;
-    width: 30%;
-    font-size: 13px;
-    line-height: 40px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.vim-powered .powered {
-    display: inline-block;
-    color: #222;
-    width: 70%;
-    height: 100%;
-    float: right;
-    margin-top: 4px;
-    font-size: 11px;
-}
-
-.vim-powered .powered strong {
-    font-size: 13px;
-}
-
-.wrapper {
-    min-height: 100%;
-    position: relative;
+    background: red;
 }
